finalização da validação front e ajustes no layout de exemplo do plugin

--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
                 </p>
 
                 <p> 
-                <label for="pass">Tem Passaporte antigo?</label>
-                <label>Sim</label><input class="radio" id="pass" name="pass" type="radio" value="sim" onclick="verificarButton(this.value);"/>
+                <label for="pass">Tem Passaporte antigo?</label><br>
+                <label>Sim</label><input class="radio" id="pass" name="pass" type="radio" value="sim" onclick="verificarButton(this.value);"/><br>
                 <label>Não</label><input class="radio" id="pasn" name="pass" type="radio" value="nao" onclick="verificarButton(this.value);"/>
+                <span id="erroPreenchimento"></span>
                 </p>
 
                 <p class="classPassaporte"> 
