--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p> 
                 <label for="pass">Tem Passaporte antigo?</label><br>
                 <label>Sim</label><input class="radio" id="pass" name="pass" type="radio" value="sim" onclick="verificarButton(this.value);"/><br>
-                <label>Não</label><input class="radio" id="pasn" name="pass" type="radio" value="nao" onclick="verificarButton(this.value);"/>
+                <label>Não</label><input class="radio" id="pasn" name="pass" type="radio" value="nao" onclick="verificarButton(this.value);"/><br>
                 <span id="erroPreenchimento"></span>
                 </p>
 
